Split serial code from host.c. This will make it easier to see the difference between work that is being done to draw and work that is being done to update the panels. serial.c has code to handle multiple teeny devices

--- a/host/makefile
+++ b/host/makefile
@@ -1,4 +1,6 @@
-all:
-	gcc host.c -lm -lX11 -g -o main
+main: serial.o host.c
+	gcc host.c serial.o -lm -lX11 -g -o main
+serial.o: serial.h serial.c
+	gcc serial.c -c
 clean:
-	rm -f main
+	rm -f *.o main
