Added select() calls to the serial code to improve stability. Changed teensy code to allow writes to panels without needing a response. Even with all this, the fastest I could get was about a 5Hz framerate. Two changes need to happen on the teensy, a buffering mechanism needs to be added to the teensy to improve framerate. The serial input needs to be a buffer rather than a string to prevent misinterpretation.

--- a/host/makefile
+++ b/host/makefile
@@ -1,6 +1,6 @@
 main: serial.o host.c
 	gcc host.c serial.o -lm -lX11 -g -o main
 serial.o: serial.h serial.c
-	gcc serial.c -c
+	gcc serial.c -g -c
 clean:
 	rm -f *.o main
